--- a/manifests/jenkins.yaml
+++ b/manifests/jenkins.yaml
@@ -1,3 +1,11 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: jenkins
+
+
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -9,6 +17,7 @@ spec:
     chart: jenkins
     repoURL: https://charts.jenkins.io
     #targetRevision: 1.16.1
+    targetRevision: 5.0.11
     helm:
       releaseName: jenkins
   destination:
